# recall

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.agents/plugins/: marketplace.json
.codex/skills/synapt/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/contributors/: cla-signatures.json
.github/workflows/: boundary-lint.yml  cla.yml  pages.yml  publish.yml  tests.yml
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/recall/: SKILL.md
codex-plugin/: .mcp.json  AGENTS.md  marketplace.json
codex-plugin/.codex-plugin/: plugin.json
demo/: README.md  aha-moment.cast  aha-moment.tape  aha-script.sh  build_demo_index.py  cross-editor-memory.tape  recall-search.tape  run_cross_editor_probe.py  run_cross_editor_query.sh
docs/: CNAME  agent-madness-submission.md  atlas-sprint-perspective.md  guide.html  index.html  launch-thread-draft.md  mcp-registry-listing-prep.md  reference.html  release-ops-plan.md
docs/blog/: agent-madness-round-1.html  agent-madness-round-1.md  agent-madness-round-2.html  agent-madness-round-2.md  all.html  anatomy-of-a-miss.html  anatomy-of-a-miss.md  authors.html  building-collaboration.html  building-collaboration.md  building-my-own-memory.html  building-my-own-memory.md  cross-platform-agents.html  cross-platform-agents.md  debugging-a-regression.html  debugging-a-regression.md  design-session-that-saved-us.html  design-session-that-saved-us.md  five-words.html  five-words.md  index.html  interview-with-claude.html  interview-with-claude.md  mission-control.html  mission-control.md  multi-agent-implementation.md  multi-agent-synergy.html  multi-agent-synergy.md  one-question.html  one-question.md  real-world-recall-audit.html  real-world-recall-audit.md  recall-field-guide.html  recall-field-guide.md  sprint-10-recap.html  sprint-10-recap.md  sprint-11-recap.html  sprint-11-recap.md  sprint-12-recap.html  sprint-12-recap.md  (+34 more)
docs/blog/drafts/: sprint-13-sentinel-section.md  sprint-16-sentinel-section.md
docs/blog/images/: manifest.json
docs/integrations/: google-adk-quickstart.md
docs/marketing/: linkedin-goose-post.md  linkedin-memoir-post.md  linkedin-products-services.md
evaluation/: BENCHMARKS.md  beam_eval.py  eval_config.json  locomo_eval.py
evaluation/codememo/: README.md  audit.py  competitor_eval.py  eval.py  schema.py
evaluation/recall-validation/: __main__.py  harness.py  models.py  reporting.py  retrieval.py  scoring.py  test_fixture_loading.py  test_thresholds.py
evaluation/recall-validation/results/: .gitignore  baseline-v0-skeleton.json
langchain-synapt/: README.md  pyproject.toml
langchain-synapt/src/langchain_synapt/: __init__.py
n8n-nodes/: index.ts  package.json  tsconfig.json
n8n-nodes/credentials/: SynaptApi.credentials.ts
n8n-nodes/nodes/Synapt/: SynaptContext.node.ts  SynaptSave.node.ts  SynaptSearch.node.ts
schemas/assertion-signals/: v1.json
schemas/embedding/: v1.json
schemas/extraction/: v1.json
schemas/source-ref/: v1.json
schemas/temporal-ref/: v1.json
scripts/: build_blog.py  build_blog_index.py  bump-version.sh  codex-loop.sh  e2e-web-verify.sh  eval-worktree.sh  generate_hero.py  generate_video.py  google_adk_probe.py  hero.py  modal_eval.py  og_card.py  publish-blog.sh  spawn_watcher.py  sprint_metrics.py  watermark.py
src/synapt/: __init__.py  cli.py  plugins.py  server.py
src/synapt/_models/: __init__.py  _utils.py  api_vision.py  base.py  convert.py  llamacpp_client.py  mlx_client.py  ollama_client.py  onnx_client.py  transformers_client.py  vllm_client.py
src/synapt/dashboard/: app.py  template.html
src/synapt/integrations/: __init__.py  anthropic.py  crewai.py  google_adk.py  langchain.py  openai_agents.py
src/synapt/persistent/: __init__.py  server.py
src/synapt/recall/: __init__.py  _filelock.py  _llm_util.py  _mlx.py  _model_router.py  actions.py  archive.py  bm25.py  channel.py  channel_chat.py  chatgpt.py  cli.py  clustering.py  codex.py  (+28 more)
tests/: test_career_tool_stub.py  test_codememo_eval.py  test_crewai_integration.py  test_dashboard_app.py  test_dashboard_upload.py  test_migrate_in_place.py  test_plugins.py  test_server.py  test_sprint_metrics.py  test_top_level_cli.py
tests/dashboard/: test_api.py
tests/e2e/: demo_fixture.py  test_channel_roundtrip.py  test_mock_agent.py  test_recall_migration_verify.py
tests/evaluation/: test_beam_eval.py  test_codememo_audit.py  test_codememo_eval.py  test_competitor_eval.py  test_locomo_eval.py
tests/extract/: conftest.py  test_finalize.py  test_finalize_extraction.py  test_prompt_builder.py  test_validate.py  test_validate_extraction.py
tests/integrations/: test_anthropic_memory_backend.py  test_anthropic_memory_tool.py  test_claude_code_synapt_memory_e2e.py  test_crewai_adapter.py  test_crewai_integration.py  test_google_adk_memory_backend.py  test_google_adk_memory_service.py  test_langchain_adapter.py  test_langchain_synapt_package.py  test_openai_agents_adapter.py  test_openai_agents_memory_backend.py
tests/recall/: conftest.py  test_action_registry.py  test_agent_id_env.py  test_archival.py  test_archive.py  test_attribution.py  test_auto_journal.py  test_benchmark_cmd.py  test_benchmarks.py  test_benchmarks_llm.py  test_bm25.py  test_channel.py  test_channel_chat.py  test_channel_hooks.py  test_channel_human_identity.py  test_channel_membership_presence.py  test_channel_migration.py  test_channel_scoping.py  test_channel_worktree.py  test_chatgpt.py  test_chunk_durability.py  test_cli.py  test_clustering.py  test_codex.py  test_config.py  test_consolidate.py  test_content_hash.py  test_content_profile.py  test_core.py  test_corrections.py  test_date_aware_retrieval_spike.py  test_direct.py  test_dm_channels.py  test_embeddings.py  test_enrich.py  test_global_claims.py  test_gr2_identity.py  test_gripspace.py  test_hybrid.py  test_hybrid_integration.py  (+29 more)
(+29 files in other folders)
