[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synapt"
version = "0.5.0"
description = "Persistent conversational memory for AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "sentence-transformers>=2.0",
    "mlx-lm>=0.10; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
authors = [
    {name = "Layne Penney"},
]

[project.urls]
Homepage = "https://synapt.dev"
Repository = "https://github.com/laynepenney/synapt"

[project.optional-dependencies]
hf = ["huggingface_hub>=0.20"]
onnx = ["onnxruntime>=1.16", "optimum[onnxruntime]>=1.16"]
transformers = ["transformers>=4.30", "peft>=0.7"]
test = ["pytest>=7.0", "numpy", "pytest-benchmark>=4.0"]

[project.scripts]
synapt = "synapt.cli:main"
synapt-recall = "synapt.recall.cli:main"
synapt-recall-server = "synapt.recall.server:main"
synapt-convert = "synapt._models.convert:main"

[project.entry-points."synapt.plugins"]
# Plugins register here via their own pyproject.toml. Example:
# repair = "synapt_repair.server"

[tool.pytest.ini_options]
addopts = "--benchmark-disable"

[tool.setuptools.packages.find]
where = ["src"]
