[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synapt"
version = "0.10.2"
description = "Persistent conversational memory for AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0",
    "sentence-transformers>=2.0",
    "mlx-lm>=0.10; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
authors = [
    {name = "Layne Penney"},
]

[project.urls]
Homepage = "https://synapt.dev"
Repository = "https://github.com/laynepenney/recall"

[project.optional-dependencies]
hf = ["huggingface_hub>=0.20"]
onnx = ["onnxruntime>=1.16", "optimum[onnxruntime]>=1.16"]
transformers = ["transformers>=4.30", "peft>=0.7"]
x = ["tweepy>=4.14"]
dashboard = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "sse-starlette>=1.0", "markdown>=3.4"]
dev = ["watchfiles>=0.20"]
test = [
    "pytest>=7.0",
    "numpy",
    "pytest-benchmark>=4.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sse-starlette>=1.0",
    "markdown>=3.4",
]

[project.scripts]
synapt = "synapt.cli:main"
synapt-dashboard = "synapt.dashboard.app:main"
synapt-recall = "synapt.recall.cli:main"
synapt-recall-server = "synapt.recall.server:main"
synapt-x-server = "synapt.x.server:main"
synapt-convert = "synapt._models.convert:main"

[project.entry-points."synapt.plugins"]
x = "synapt.x.server"
# External plugins register via their own pyproject.toml. Example:
# repair = "synapt_repair.server"

[project.entry-points."synapt.backends"]
# Plugins register model backends here. Each entry point must reference
# a module with a register(register_fn) callable. Example:
# modal = "synapt_private.backends"

[project.entry-points."synapt.commands"]
# Plugins register CLI subcommands here. Each entry point must reference
# a callable main() function. Example:
# repair = "synapt_private.repair.cli:cli_main"

[tool.pytest.ini_options]
addopts = "--benchmark-disable"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"synapt.resources" = ["skills/dev-loop/SKILL.md"]
