[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-synapt"
version = "0.1.0"
description = "LangChain chat message history backed by synapt recall"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "synapt[langchain]>=0.13.0",
]
authors = [
    {name = "Layne Penney"},
]

[project.urls]
Homepage = "https://synapt.dev"
Repository = "https://github.com/synapt-dev/recall"

[tool.setuptools.packages.find]
where = ["src"]
